# cope-chess

./: .env.example  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml
bcec/: __init__.py  cli.py  prototype.py
bcec/core/: __init__.py  models.py  protocol.py
bcec/db/: __init__.py
bcec/match_runner/: __init__.py  engine_instance.py  match_runner.py  uci.py
bcec/runner/: worker_server.py
bcec/tournament/: game_runner.py  game_state.py  time_control.py  tournament.py  tournament_runner.py
bcec/tournament_runner/: __init__.py  tournament.py  tournament_runner.py
bcec/web/: __init__.py
bcec/worker/: client.py
cope/: __init__.py  cli.py  prototype.py  ratings.py
cope/core/: __init__.py  models.py
cope/db/: __init__.py  connection.py  queries.py  repo.py  schema.sql
cope/runner/: __init__.py  local.py  scheduler.py  worker_server.py
cope/tournament/: engine_instance.py  time_control.py  tournament.py
cope/web/: api.py  app.py
cope/web/static/: script.js  style.css  style.scss
cope/web/templates/: base.html  game_detail.html  tournament_detail.html  tournaments.html
cope/web/templates/admin/: tournament_detail.html  workers.html
cope/worker/: __init__.py  client.py  pool.py  uci_engine.py
frontend/src/components/admin/: OpeningImportEditor.vue
frontend/src/components/layout/: PublicLayout.vue
frontend/src/pages/admin/: AdminTournamentPage.vue  WorkerPage.vue  WorkersPage.vue
frontend/src/pages/public/: TournamentPage.vue
match-runner/: engine_instance.py  game_state.py  main.py  match.py  time_control.py
match_runner/: __init__.py  engine_instance.py  match.py  match_runner.py  time_control.py
tests/: test_aborted_rating_commit.py  test_web_resilience.py  test_worker_client_credentials.py  test_worker_engine_cache.py
tournament_runner/: tournament.py  tournament_runner.py
